Fix Blurry Text (Chrome)
Remove Perspective
Does not fix Safari rendering

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,8 +21,6 @@ a:hover, a:visited, a /*Link Styling*/
 }
 #ptablecontainer /*Contains Periodic Table*/
 {
-    -webkit-perspective: 3000;
-
 	-webkit-transform-style:preserve-3d;
 	-o-transform-style:preserve-3d;
     -ms-transform-style:preserve-3d;
